--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,12 @@ nav .nav .nav__items-1 .nav__menu a {
   text-decoration: none;
   color: #050038;
 }
+nav .nav .nav__items-1 .nav__menu a:hover {
+  color: #ffffff;
+  background: #4262FF;
+  padding: 8px 16px;
+  border-radius: 20px;
+}
 nav .nav .nav__items-2 .mobile__menu__btn {
   display: none;
 }
@@ -60,6 +66,9 @@ nav .nav .nav__items-2 .nav__btns button .login {
 }
 nav .nav .nav__items-2 .nav__btns button span {
   color: #FFFFFF;
+}
+nav .nav .nav__items-2 .nav__btns button:hover {
+  background: #041569;
 }
 nav .nav .nav__items-2 .nav__btns .burger__menu {
   display: none;
@@ -159,6 +168,9 @@ header .header .header__left .header__left-btns .header__left-btns-a {
   color: #FFFFFF;
   border-radius: 32px;
   text-decoration: none;
+}
+header .header .header__left .header__left-btns .header__left-btns-a:hover {
+  background: #041569;
 }
 header .header .header__left .header__left-about {
   font-size: 14px;
@@ -373,6 +385,7 @@ main .main .main__third .main__third-block .main__third-nav .main__third-nav-men
   border: 1px solid #F2F2F2;
   border-radius: 24px;
   padding: 13px 18px;
+  cursor: pointer;
 }
 main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu li a {
   color: #050038;
@@ -380,6 +393,13 @@ main .main .main__third .main__third-block .main__third-nav .main__third-nav-men
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+}
+main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu li:hover {
+  background: #d3d8ec;
+  border: 1px solid #d3d8ec;
+}
+main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu li:hover a {
+  color: #4262FF;
 }
 @media screen and (max-width: 1024px) {
   main .main .main__third .main__third-block .main__third-nav .main__third-nav-menu {
@@ -474,6 +494,13 @@ main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-men
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
+}
+main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu li:hover {
+  background: #d3d8ec;
+  border: 1px solid #d3d8ec;
+}
+main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu li:hover a {
+  color: #4262FF;
 }
 @media screen and (max-width: 1024px) {
   main .main .main__forth .main__forth-block .main__forth-nav .main__forth-nav-menu {
@@ -649,6 +676,11 @@ main .main .like__companies .like__companies-about {
   padding: 10px 32px;
   margin: 24px auto 120px auto;
 }
+main .main .like__companies .like__companies-about:hover {
+  color: #ffffff;
+  background: #050038;
+  border-color: #050038;
+}
 main .main .like__companies .like__companies-items {
   display: flex;
   align-items: flex-start;
@@ -699,12 +731,14 @@ main .main .like__companies .like__companies-items .like__companies-item .like__
     width: 100%;
   }
 }
+main .main .sign__up__user {
+  max-width: 1120px;
+}
 main .main .sign__up__user .sign__up__user-items {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 1120px;
   min-height: 584px;
   background: #050038;
   border-radius: 16px;
@@ -747,6 +781,100 @@ main .main .sign__up__user .sign__up__user-items button {
   border-radius: 32px;
   cursor: pointer;
   border: none;
+}
+main .main .sign__up__user .sign__up__user-items button:hover {
+  color: #050038;
+  background: #ffffff;
+  border-color: #050038;
+}
+
+footer .footer {
+  margin-top: 120px;
+  padding: 30px 20px;
+  background: #050038;
+  max-width: 1200px;
+}
+footer .footer .footer__items {
+  display: flex;
+  gap: 40px;
+  align-items: flex-start;
+  justify-content: center;
+}
+footer .footer .footer__items ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
+footer .footer .footer__items ul h5 {
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+}
+footer .footer .footer__items ul li a {
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+}
+@media screen and (max-width: 1024px) {
+  footer .footer .footer__items {
+    flex-wrap: wrap;
+    text-align: center;
+  }
+}
+footer .footer .footer-svg {
+  margin-top: 100px;
+  display: flex;
+}
+@media screen and (max-width: 768px) {
+  footer .footer .footer-svg {
+    margin-top: 50px;
+  }
+}
+footer .footer .footer-info {
+  margin-top: 75px;
+}
+footer .footer .footer-info .footer__social-media {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+footer .footer .footer-info .footer__social-media .footer__social-media-icons {
+  display: flex;
+  gap: 12px;
+}
+footer .footer .footer-info .footer__social-media p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 0px;
+}
+@media screen and (max-width: 1024px) {
+  footer .footer .footer-info .footer__social-media {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer .footer .footer-info {
+    margin-top: 35px;
+  }
+}
+footer .footer .footer-store {
+  display: flex;
+  gap: 16px;
+  margin-top: 32px;
+  margin-bottom: 48px;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 1024px) {
+  footer .footer .footer-store {
+    justify-content: center;
+  }
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
