--- a/css/style.scss
+++ b/css/style.scss
@@ -48,6 +48,13 @@ nav {
                 a {
                     text-decoration: none;
                     color: $primary;
+
+                    &:hover {
+                        color: #ffffff;
+                        background: $colorBlue;
+                        padding: 8px 16px;
+                        border-radius: 20px;
+                    }
                 }
             }
         }
@@ -74,6 +81,10 @@ nav {
 
                     span {
                         color: $colorWhite;
+                    }
+
+                    &:hover {
+                        background: #041569;
                     }
                 }
 
@@ -209,6 +220,10 @@ header {
                     color: $colorWhite;
                     border-radius: 32px;
                     text-decoration: none;
+
+                    &:hover {
+                        background: #041569;
+                    }
                 }
             }
 
@@ -461,12 +476,22 @@ main {
                             border: 1px solid #F2F2F2;
                             border-radius: 24px;
                             padding: 13px 18px;
+                            cursor: pointer;
                             a {
                                 color: $primary;
                                 text-decoration: none;
                                 font-weight: 400;
                                 font-size: 14px;
                                 line-height: 20px;
+                            }
+
+                            
+                            &:hover {
+                                background: #d3d8ec;
+                                border: 1px solid #d3d8ec;
+                                a {
+                                    color: $colorBlue;
+                                }
                             }
                         }
 
@@ -568,6 +593,14 @@ main {
                                 font-weight: 400;
                                 font-size: 14px;
                                 line-height: 20px;
+                            }
+
+                            &:hover {
+                                background: #d3d8ec;
+                                border: 1px solid #d3d8ec;
+                                a {
+                                    color: $colorBlue;
+                                }
                             }
                         }
 
@@ -762,6 +795,12 @@ main {
                 border-radius: 24px;
                 padding: 10px 32px;
                 margin: 24px auto 120px auto;
+
+                &:hover {
+                    color:#ffffff;
+                    background: $primary;
+                    border-color: $primary;
+                }
             }
 
             .like__companies-items {
@@ -821,12 +860,13 @@ main {
         }
 
         .sign__up__user {
+            max-width: 1120px;
             .sign__up__user-items {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                max-width: 1120px;
+                
                 min-height: 584px;
                 background: $primary;
                 border-radius: 16px;
@@ -876,11 +916,112 @@ main {
                     border-radius: 32px;
                     cursor: pointer;
                     border: none;
+
+                    &:hover {
+                        color: $primary;
+                        background: #ffffff;
+                        border-color: $primary;
+                    }
                 }
             }
         }
 
     }
+}
+
+footer {
+    .footer {
+        margin-top: 120px;
+        padding: 30px 20px;
+        background: $primary;
+        max-width: 1200px;
+        .footer__items {
+            display: flex;
+            gap: 40px;
+            align-items: flex-start;
+            justify-content: center;
+            ul {
+                list-style-type: none;
+                padding-left: 0px;
+                h5 {
+                    color: #ffffff;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 24px;
+                }
+                li {
+                    a {
+                        text-decoration: none;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 24px;
+                        color: #ffffff;
+                    }
+                }
+            }
+
+            @media screen and (max-width: $tablet) {
+                flex-wrap: wrap;
+                text-align: center;
+            }
+        }
+
+        .footer-svg {
+            margin-top: 100px;
+            display: flex;
+           
+            @media screen and (max-width: $mobileL) {
+                margin-top: 50px;
+            }
+        }
+
+        .footer-info {
+            margin-top: 75px;
+            .footer__social-media {
+                display: flex;
+                gap: 20px;
+                align-items: center;
+                justify-content: center;
+                flex-wrap: wrap;
+                .footer__social-media-icons {
+                    display: flex;
+                    gap: 12px;
+                }
+
+                p {
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 24px;
+                    text-align: center;
+                    color: #FFFFFF;
+                    margin: 0px;
+                }
+
+                @media screen and (max-width: $tablet) {
+                    flex-wrap: wrap;
+                }
+            }
+
+            @media screen and (max-width: $mobileL) {
+                margin-top: 35px;
+            }
+        }
+
+        .footer-store {
+            display: flex;
+            gap: 16px;
+            margin-top: 32px;
+            margin-bottom: 48px;
+            flex-wrap: wrap;
+
+            @media screen and (max-width: $tablet) {
+                justify-content: center;
+            }
+        }
+       
+    }
+
+   
 }
 
 
